fixes for Java 21 playwright methods updates